Scrollbar issue solved

--- a/src/Components/MovieList.css
+++ b/src/Components/MovieList.css
@@ -1,6 +1,6 @@
 .scrollbar {
   scrollbar-color: black;
-  scrollbar-width: thin;
+  /* scrollbar-width: thin; */
 }
 
 .scrollbar::-webkit-scrollbar {
